--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <div class="cursor">
       <img src="bonkbat2.png"/>
     </div>
+    <div class="reticle">
+      <img src="reticle.png"/>
+    </div>
   </div>
 
   <!--Javascript-->
@@ -46,12 +49,15 @@ const holes = document.querySelectorAll(".hole");
 const playBtn = document.querySelector(".buttons .play");
 const stopBtn = document.querySelector(".buttons .stop");
 const cursor = document.querySelector(".cursor img");
+const reticle = document.querySelector(".reticle img");
 
 
 
 window.addEventListener("mousemove", (e) => {
   cursor.style.top = e.pageY + "px";
   cursor.style.left = e.pageX + "px";
+  reticle.style.top = e.pageY + "px";
+  reticle.style.left = e.pageX + "px";
 
   window.addEventListener("click", () => {
     cursor.style.animation = "hit 0.1s ease";
@@ -79,8 +85,8 @@ playBtn.addEventListener("click", () => {
 
     setTimeout(() => {
       hole.removeChild(image);
-    }, 600);
-  }, 700);
+    }, 900);
+  }, 1100);
 
   window.addEventListener("click", (e) => {
     if (e.target === hole) score.innerText = ++points;
