--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dogebonk, Bonk-a-mole">
-    <meta name="author" content="Jojo Bonkstar">
+    <meta name="author" content="Jojo Bonkstar, Vesnushki">
     <link rel="stylesheet" href="styles.css"/>
     <title>Bonk-a-mole</title>
     </head>
@@ -51,6 +51,10 @@ const stopBtn = document.querySelector(".buttons .stop");
 const cursor = document.querySelector(".cursor img");
 const reticle = document.querySelector(".reticle img");
 
+var audio = new Audio("bonk-sound-effect.mp3");
+document.onclick = function() {
+  audio.play();
+}
 
 
 window.addEventListener("mousemove", (e) => {
@@ -90,6 +94,7 @@ playBtn.addEventListener("click", () => {
 
   window.addEventListener("click", (e) => {
     if (e.target === hole) score.innerText = ++points;
+      
   });
 
   stopBtn.addEventListener("click", () => {
